@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.49-1lsb3.2.i486.rpm 3387143 BLAKE2B 3a1d91253f042193c5ac505884628da3c53f1896b321d2043c261d92a27b8ad3e3964d8ba831e185dfbf60dbbf00fe07fb19d66362958bddff9266bc71659533 SHA512 248aee0a5ee13ae9b4ce83a3eb7e70884651a61ce27f0cbcf677745a461fc57aad4cb1dcc542378022a86c645dd96b42f3facd94b1353ef6cdcf20d42cb9dda0
-DIST epson-inkjet-printer-escpr2-1.1.49-1lsb3.2.x86_64.rpm 3386722 BLAKE2B f7b13d9f7b88bc03ab9567f18fd3780864f94d641def07f8bb30f5b95f87fa4a9272e5f4dc22e8257794206a1dc2657dc63fe5c37b70cfcf9d95d7e25a575adf SHA512 9e792decb78252902d42c7134146a705de64e4144e66269d3d11dc452817664ea002588d8b9dde9b646387b5fca8b2bac55f8828e8553cc929579fb55fc23662
 DIST epson-inkjet-printer-escpr2-1.1.50-1lsb3.2.i486.rpm 3471362 BLAKE2B 782cd688dbe2c1284bd91e7e8f150500fefe225baf4acf36ebed99604421caa85fa613daa2de1890ff5bb3a69197d26cc92f20dd1741fa685f11e041a9d52736 SHA512 61385d8cf0913c4532a50eebbf967bcb953c2c137fae577f09b14002f1d38ef72ef7f32b61574785b471d1e092331c955d446476dbebc3533551ea44165a5023
 DIST epson-inkjet-printer-escpr2-1.1.50-1lsb3.2.x86_64.rpm 3470916 BLAKE2B a5bfbbad241c92b9c0b63ea520857aa6fb21e62c9a6cb3da8ae89e9fa43b6a0ba0f303be229171f24542fbf48b56c1609e6e43a075d28f716c2d5b2459ebd70e SHA512 76ac6110e827a933cda32bce7885379343f730545235d6f5726619b1d9f768504e53fb1f2fae3e1808b50e818d510198b400e77c6e488dc0361678b4d3e5e32f
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.49.ebuild 1670 BLAKE2B fd12c08b33ecf2d606a41f8192e2f83dbbb98b4589bfb212f1ef77ee0dce3a768e538fe439253915ba7f24b36babd38414f19264101cf3e1a8c8aca8ce146c99 SHA512 e0429a41d68d9cb09d55f0b9924f2601fc977309935068c9496348debbf5c76340f416f75cc95b0a87a3e207fe00aaf6203b1ab875ed3dc7c3d51588432061b8
+DIST epson-inkjet-printer-escpr2-1.1.52-1lsb3.2.i486.rpm 3515561 BLAKE2B 18f62f9214c94cddce81c69aa86d5ad545716f54f88fc2aefa66f28d1fec0fe502880776dfdf7deb46431fe9c928e14c60a33e2e287bfeb353640693b1cc9633 SHA512 e037df5f4cc7407bc3a7b6e141a502ef15348e2aaa70630104876e898594459b9197d98923f6273b84646910eb3109b444cf956f58d9224e9e93f7b46b8eb82a
+DIST epson-inkjet-printer-escpr2-1.1.52-1lsb3.2.x86_64.rpm 3515117 BLAKE2B 8c81f70f4ba2fbe10588261e1e8bfd3be0ec4ebabca28a1fd7e271ba3d70eaf9f7a0c3f4af1620c4002bafe438b433b930b5b6a8a1457ea64a663a7ff593db51 SHA512 e6972e268b08e19ebb5edb26dbce21128bb36978dbafab310baf1d3d68064ecadfd2502e1f98be148b0e32fd9e40363cbb98c0fd18b10d19dbd5057e414cb3e5
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.50.ebuild 1670 BLAKE2B e64f37f60648b98f4d939c79531b02b5be2d391d3ae32987c5fbea0b9e3a313c7eea77aa447539ad236656dcbcd5159d1a014633a08848363c658d9694015a0d SHA512 bd68395fafc59fcc9cdef74d422e53d486ed3d7c7ea269044b3cc36662fe0b167f0f08c78052043b8bc4a473375e5923a76b80b4b535bf09d8e2da9158769332
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.52.ebuild 1670 BLAKE2B d1ff175139a1226586cc8059559971e7d7b003c96e9afab13721099d0bcf81b6e81811909447c2dbe62f6120a7614f5a507f2c89a40c6b31d7d00fd39724f161 SHA512 4d9a3a0fa0db4516c174d12081e7c7406c11719ad8b7bd6a90403c1c700198d8baebb371e55c008379838042d148204f9a26690124d6aa91f4c6fe2d60b106a8
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
