@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.49.tar.gz 4674609 BLAKE2B 39d64d96141651d0ed46f758276a18a182d3476803e13c459e56677bb23816a732a8a9d20611b14cf4940b2b8b404ff5a8e7402d426756380a382a832f32bd94 SHA512 b8a27a382577f45c176150d07e19e5c3cd44e5c7475fb28f47cbd6a242fad6067aac7ae2e4c75a97ec3f3b5fbc8e3421309393ece70ab3a4d4dc731531aa16f1
 DIST epson-inkjet-printer-escpr2-1.1.50.tar.gz 4783590 BLAKE2B 45428d243b5d5121bca9e6c4204a3649615efd9893ccf5c6f658d881019e6c57720ebb3a2ad2f54d8dce869faa6d450b532c73f268ebe1e8c99ae7540603c913 SHA512 f81a08530a6cc456aace3bb5083836ee5a83e4da61b70f121a16fe4f66a1881aac1fc684e8c36ea6aecfca9571050f340c1cf16ef7d4f277ff7a68634ba0d3ca
-EBUILD epson-inkjet-printer-escpr2-1.1.49.ebuild 1319 BLAKE2B 2bcec9c1641a55ca9a38a0f439b7cda5838b1357e9ed6b0dc1dcaec88404358f581a76f29b89d7fc17338226fe694127c3bbc26d3b269de569095bfd7df1a368 SHA512 a8a70979d92d2e8280674d6b4a768b2203cbfed9a661209d8d42c5fddcea93be3a848f545b092e06d468375d2e88742f2db6fe45248ecda453d32d7be5a40c63
+DIST epson-inkjet-printer-escpr2-1.1.52.tar.gz 4867917 BLAKE2B 95f77f6d9b283e24a88a671e75fdac236d29cb7df7663d6a38be4a88bcf498d14a5dc1cc129894f092d6bafc6a2466f882612f0ae13430cfc64dfb70ec85d0aa SHA512 b2be6af8cda3b4d40430f239001323ed11c97f0f9309b7e76cf520f5261f264bdc994493d770bec0117ca0ad07730d4aeaa6b9297ed185c4d8efe61bac80f9f5
 EBUILD epson-inkjet-printer-escpr2-1.1.50.ebuild 1319 BLAKE2B c039c39a1ab5f08329aa60ba2758a55d1b3a013633d0b3de92c5bee11eb785ec7608e3f5d64f1d20c7054b67904318bc52de62e9c7fcea44bde35d7c2bcd33c5 SHA512 a42b695e153ed15c6a8ef4235c4cf6bd3133a0dce013daf0e9f6b49d3ad73e702c337764b00dcf7f2b3626ec732bf3ca1a14c9cc20eb56d007500b05fa286e1e
+EBUILD epson-inkjet-printer-escpr2-1.1.52.ebuild 1319 BLAKE2B 775ad113642aff00f4ce52932393e868f1d30c94642d6950c1caad014af01e500b699fce5ca4f4383cb147f07f9bae2838676516fbe31d332b9e466b2b1c5066 SHA512 70df40d680f0acb109fe7fb8989f1615bead7ff74cdab1cdfd77addbbc62b9ba0991e60c07f7c5799fdce9e2bdc9415ec166247e8fc4e777febf3663501ff546
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
