@@ -1,6 +1,16 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.1.52                        (2022-10-14)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.1.51                        (2022-10-06)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
 epson-inkjet-printer-escpr2-1.1.50                        (2022-09-27)
 ----------------------------------------------------------------------
  * Supported new models
